--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Nicholas Hitt's Portfolio</h1>
     <h2>I'm a web developer</h2>
     </ br>
-    <h2><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h2>
+    <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
     <img src="./assets/images/movies.png" alt="screenshot of page" />
-    <h2><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h2>
+    <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
     <img src="./assets/images/birthday.jpg" alt="screenshot of invite" />
 
 </br>
